<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.186"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/item_image"
            android:fontFamily="@font/avenir"
            android:textColor="@color/blue_black"
            android:textSize="12sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/status" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:fontFamily="@font/avenir"
            android:text="@string/strip"
            android:textColor="@color/blue_black"
            card_view:layout_constraintStart_toEndOf="@+id/item_status"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/avenir"
            android:text="@string/strip"
            android:textColor="@color/blue_black"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/name_place"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir"
            android:text="@string/time"
            android:textColor="@color/blue_black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toEndOf="@+id/textView27"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameplace"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/blue_black"
            android:fontFamily="@font/avenir"
            card_view:layout_constraintStart_toEndOf="@+id/textView14"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="4dp"
            android:textSize="11sp"
            android:textFontWeight="400"
            android:fontFamily="@font/avenir"
            android:textColor="@color/grey_indicator_selected"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toBottomOf="@+id/item_status"
            tools:text="@string/address" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>