<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/avenir"
        android:text="@string/profiletitle"
        android:textColor="@color/white"
        android:textFontWeight="800"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:background="@drawable/edit"
        android:layout_marginRight="24dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bgbuttoncheckinout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.008" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/photouser"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <TextView
        android:id="@+id/nameuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir"
        android:text="@string/nameuser"
        android:textColor="@color/blue_black"
        android:textFontWeight="800"
        android:layout_marginTop="18dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir"
        android:text="@string/role"
        android:textColor="@color/grey_indicator_selected"
        android:textFontWeight="500"
        android:textSize="13sp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/nameuser" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/avenir"
        android:text="@string/general"
        android:textColor="@color/grey_indicator_selected"
        android:textFontWeight="500"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />





    <TextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxshadowprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/card"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir"
        android:text="@string/nokaryawantitle"
        android:textColor="@color/blue_black"
        android:textFontWeight="800"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/avenir"
        android:text="@string/nik"
        android:textColor="@color/grey_indicator_selected"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/buttonalamat"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxshadowprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/book"
        app:layout_constraintBottom_toBottomOf="@+id/buttonalamat"
        app:layout_constraintStart_toStartOf="@+id/buttonalamat"
        app:layout_constraintTop_toTopOf="@+id/buttonalamat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir"
        android:text="@string/alamattitle"
        android:textColor="@color/blue_black"
        android:textFontWeight="800"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="17dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/buttonalamat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir"
        android:text="@string/nik"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="17dp"
        android:textColor="@color/grey_indicator_selected"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonalamat"
        app:layout_constraintStart_toEndOf="@+id/textView22" />


    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxshadowprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonalamat" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/lock"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir"
        android:text="@string/changepass"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/blue_black"
        android:textFontWeight="800"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir"
        android:text="@string/changepassvalue"
        android:textColor="@color/grey_indicator_selected"
        android:textFontWeight="400"
        android:textSize="13sp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintStart_toEndOf="@+id/textView24" />

</androidx.constraintlayout.widget.ConstraintLayout>